<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="dz.esi.team.appprototype.AboutUs"
    tools:showIn="@layout/activity_about_us">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ourTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="8dp"
            style="@style/profileFieldsTitle"
            android:textColor="@color/gray_color_dark"
            android:text="Notre equipe" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="6"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            app:elevation="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/clean_white"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/benchohra_name"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray_color_darker"
                    app:layout_constraintLeft_toRightOf="@+id/imageView1"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView1" />
                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/benchohra_email"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/gray_color_dark"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    app:layout_constraintLeft_toLeftOf="@+id/textView11"
                    android:layout_marginLeft="0dp" />
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="6"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            app:elevation="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/clean_white"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borsali_name"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray_color_darker"
                    app:layout_constraintLeft_toRightOf="@+id/imageView2"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView2" />
                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/borsali_email"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/gray_color_dark"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView21"
                    app:layout_constraintLeft_toLeftOf="@+id/textView21"
                    android:layout_marginLeft="0dp" />
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            app:elevation="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/clean_white"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textView31"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bouguesri_name"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray_color_darker"
                    app:layout_constraintLeft_toRightOf="@+id/imageView3"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView3" />
                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bouguesri_email"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/gray_color_dark"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView31"
                    app:layout_constraintLeft_toLeftOf="@+id/textView31"
                    android:layout_marginLeft="0dp" />
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            app:cardCornerRadius="4dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            app:cardUseCompatPadding="true"
            app:elevation="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/clean_white"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textView41"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boutifour_name"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray_color_darker"
                    app:layout_constraintLeft_toRightOf="@+id/imageView4"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />
                <TextView
                    android:id="@+id/textView42"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/boutifour_email"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/gray_color_dark"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView41"
                    app:layout_constraintLeft_toLeftOf="@+id/textView41"
                    android:layout_marginLeft="0dp" />
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            app:elevation="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/clean_white"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textView51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chenine_name"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray_color_darker"
                    app:layout_constraintLeft_toRightOf="@+id/imageView5"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView5" />
                <TextView
                    android:id="@+id/textView52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chenine_email"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/gray_color_dark"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView51"
                    app:layout_constraintLeft_toLeftOf="@+id/textView51"
                    android:layout_marginLeft="0dp" />
                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="6"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true"
            app:elevation="0dp">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/clean_white"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="16dp">

                <TextView
                    android:id="@+id/textView61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/souab_name"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray_color_darker"
                    app:layout_constraintLeft_toRightOf="@+id/imageView6"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView6" />
                <TextView
                    android:id="@+id/textView62"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/souab_email"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    android:textColor="@color/gray_color_dark"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView61"
                    app:layout_constraintLeft_toLeftOf="@+id/textView61"
                    android:layout_marginLeft="0dp" />
                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>

